# Financial-Time-Series-Data-Ingestion-Pipeline

./: Dockerfile.airflow  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose-1.yml  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
airflow/dags/: financial_pipeline.py  financial_timeseries_dag.py
configs/: airflow_connections.txt  airflow_variables  development.yaml  production.yaml  testing.yaml
docs/: airflow.md  config.md  ops.md  project_overview.md  technical_specs.md
src/: run.py
src/models/: schemas.py
src/monitoring/: alerts.py  metrics.py
src/pipeline/: collector.py  processor.py  storage.py
src/utils/: config.py  rate_limiter.py
tests/: confest.py  test_monitoring.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_pipeline.py
tests/unit/: test_collector.py  test_processor.py  test_storage.py
